--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -2482,3 +2482,4 @@ li.mainwp-menu-sub-item-filer{
 .mainwp-menu-item .handle .mainwp-menu-name{
     font-weight: bold;
 }
+#mainwp-synced-status-sites-wrap {border-bottom: 1px solid #e5e5e5;}
