= 4.0.1 - 9-3-19 = * Fixed: an issue with incorrect plugin info links * Fixed: an issue with clearing and preloading WP Rocket cache * Fixed: displaying child sites in the Manage Sites issue on some setups * Fixed: the extensions settings synchronization issue * Fixed: multiple typos * Fixed: multiple cosmetic issues * Added: option to disable updates confirmations popups * Added: the option to add plugins to favorites after upload * Updated: notification in the Manage Sites table when there is no results for selected filters * Updated: extensions installation modal logic * Updated: multiple text notifications

--- a/assests/css/mainwp-responsive-layouts.css
+++ b/assests/css/mainwp-responsive-layouts.css
@@ -97,6 +97,11 @@
 		display: block !important;
 	}
 
+	#widget-overview .ui.grid .two.column.row .column {
+		width: 100% !important;
+		text-align: center !important;
+	}
+
 	/*--- Sites ---*/
 
 	#mainwp-add-new-buttons {
