* Fixed: an issue with incorrect backups count number in the Client Reports system * Fixed: multiple cosmetic issues * Fixed: multiple typos * Fixed: an issue with short appearance for feedback message after reconnecting site * Fixed: an issue with displaying the Screen Options button in wrong screens * Added: the ability to disable update confirmations only for single updates * Added: the option to show sites favicons * Added: warning and button to the header element if any updates detected on the MainWP Dashboard site * Added: groups info in the Site Info widget * Added: individual site info about abandoned plugins and themes * Updated: Connection status widget view saves the last selection

--- a/assests/css/mainwp-semantic.css
+++ b/assests/css/mainwp-semantic.css
@@ -103,3 +103,5 @@
 .mainwp-ui .ui.message.info a:not(.button) { color: #276f86; font-weight: bolder; text-decoration: underline !important;}
 .mainwp-ui .ui.message.red a:not(.button) { color: #a00000; font-weight: bolder; text-decoration: underline !important;}
 .mainwp-ui .ui.message a:not(.button) { color: rgba(0,0,0,.87); font-weight: bolder; text-decoration: underline !important;}
+
+.mainwp-ui [data-tooltip][data-inverted]:after { z-index: 4 !important; }
