--- a/assests/css/mainwp-responsive-layouts.css
+++ b/assests/css/mainwp-responsive-layouts.css
@@ -7,7 +7,7 @@
 @media only screen and ( min-width: 769px ) and ( max-width: 1440px ) {
 
 	#mainwp-main-menu {
-		max-height: 520px;
+		max-height: 75vh;
 		overflow-y: scroll;
 	}
 	#mainwp-updates-overview-menu,
