--- a/assests/js/calendar/calendar.css
+++ b/assests/js/calendar/calendar.css
@@ -1,6 +1,6 @@
 /*!
- * # Semantic UI 0.0.8 - Calendar
- * http://github.com/semantic-org/semantic-ui/
+ * # Fomantic-UI - Calendar
+ * http://github.com/fomantic/Fomantic-UI/
  *
  *
  * Released under the MIT license
@@ -58,6 +58,9 @@
 .ui.calendar .ui.table.day {
   min-width: 18em;
 }
+.ui.calendar .ui.table.day.andweek {
+  min-width: 22em;
+}
 .ui.calendar .ui.table.hour {
   min-width: 20em;
 }
@@ -68,9 +71,6 @@
 }
 .ui.calendar .ui.table tr th {
   border-left: none;
-}
-.ui.calendar .ui.table tr th .icon {
-  margin: 0;
 }
 .ui.calendar .ui.table tr th .icon {
   margin: 0;
@@ -105,8 +105,13 @@
   right: 0;
 }
 .ui.calendar .ui.table tr .disabled {
-  pointer-events: none;
+  pointer-events: auto;
+  cursor: default;
   color: rgba(40, 40, 40, 0.3);
+}
+.ui.calendar .ui.table tr .adjacent:not(.disabled) {
+  color: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.03);
 }
 
 /*--------------
@@ -119,20 +124,42 @@
 .ui.calendar .ui.table tr td.range {
   background: rgba(0, 0, 0, 0.05);
   color: rgba(0, 0, 0, 0.95);
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 .ui.calendar .ui.table.inverted tr td.range {
   background: rgba(255, 255, 255, 0.08);
   color: #ffffff;
-  box-shadow: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
-.ui.calendar .calendar:focus .ui.table tbody tr td.focus,
-.ui.calendar .calendar.active .ui.table tbody tr td.focus {
-  box-shadow: inset 0 0 0 1px #85B7D9;
+.ui.calendar:not(.disabled) .calendar:focus .ui.table tbody tr td.focus,
+.ui.calendar:not(.disabled) .calendar.active .ui.table tbody tr td.focus {
+  -webkit-box-shadow: inset 0 0 0 1px #85B7D9;
+          box-shadow: inset 0 0 0 1px #85B7D9;
 }
-.ui.calendar .calendar:focus .ui.table.inverted tbody tr td.focus,
-.ui.calendar .calendar.active .ui.table.inverted tbody tr td.focus {
-  box-shadow: inset 0 0 0 1px #85B7D9;
+.ui.calendar:not(.disabled) .calendar:focus .ui.table.inverted tbody tr td.focus,
+.ui.calendar:not(.disabled) .calendar.active .ui.table.inverted tbody tr td.focus {
+  -webkit-box-shadow: inset 0 0 0 1px #85B7D9;
+          box-shadow: inset 0 0 0 1px #85B7D9;
+}
+
+
+/*******************************
+            States
+*******************************/
+
+
+/*--------------------
+        Disabled
+---------------------*/
+
+.ui.disabled.calendar {
+  opacity: 0.45;
+}
+.ui.disabled.calendar > .input,
+.ui.disabled.calendar .ui.table tr .link {
+  pointer-events: none;
 }
 
 
