[CodeFactor] Apply fixes

--- a/assets/css/mainwp-responsive-layouts.css
+++ b/assets/css/mainwp-responsive-layouts.css
@@ -87,7 +87,7 @@
 
 	.mainwp-ui .mainwp-grid-wrapper .grid-item.column {
 		margin-top: 1rem !important;
-		padding: 0px !important;
+		padding: 0 !important;
 	}
 
 	.mainwp-grid-wrapper .grid-item .ui.list .column,
@@ -155,7 +155,7 @@
 	.mainwp-nav-wrap #mainwp-logo {
 		height: auto;
 		margin: 0;
-		padding: 1rem 1rem 0.5rem 1rem;
+		padding: 1rem 1rem 0.5rem;
 	}
 
 	.mainwp-ui .hamburger {
