Added: Updates selected feature. Added: fillters: mainwp_plugin_information_sslverify, mainwp_after_posting_delete_bulk_post

--- a/assets/css/mainwp-semantic.css
+++ b/assets/css/mainwp-semantic.css
@@ -15,6 +15,10 @@
   font-size: .95em;
 }
 
+.mainwp-ui .ui.vertical.menu > .item:first-child {
+  border-radius: 0px !important;
+}
+
 .mainwp-ui .ui.message:last-child {
   margin-bottom: 1em;
 }
