--- a/assets/css/mainwp-semantic.css
+++ b/assets/css/mainwp-semantic.css
@@ -109,3 +109,7 @@
 .mainwp-ui .ui.message a:not(.button) { color: rgba(0,0,0,.87); font-weight: bolder; text-decoration: underline !important;}
 
 .mainwp-ui [data-tooltip][data-inverted]:after { z-index: 4 !important; }
+
+.mainwp-ui .progress .bar {
+  border-radius: 0px;
+}
