Fixed: hooks name mainwp_extension_is_activated, mainwp_extension_is_pro_member Added: total updates information for individual updates page. Added: hooks mainwp_load_text_domain, mainwp_posts_search_bulk_sites Mergered: layouts

--- a/assets/css/mainwp-responsive-layouts.css
+++ b/assets/css/mainwp-responsive-layouts.css
@@ -57,6 +57,12 @@
 		width: auto !important;
 	}
 
+	#mainwp-top-header #mainwp-sync-sites {
+		display: block;
+		width: 100%;
+		margin-bottom: 20px;
+	}
+
 	.mainwp-side-content {
 		width: 100%;
 		border: none !important;
