--- a/assets/css/mainwp.css
+++ b/assets/css/mainwp.css
@@ -86,11 +86,10 @@
 /* Page Navigation */
 
 #mainwp-page-navigation-wrapper {
-  padding-top: .85714286em;
+  padding-top: 20px;
   background: #fff; }
   .mainwp-page-navigation {
-    overflow-x: scroll;
-    border-bottom-width: 1px !important; }
+    border-bottom-width: 2px !important; }
 
 
 /* Menu */
