* Fixed: An issue with counting available updates on specific setups * Fixed: An issue with loading categories in the New Posts screen * Fixed: An issue with triggering updates on specific setups * Fixed: Multiple cosmetic and usability issues * Added: Screenshot feature (page) to the Sites section * Updated: Quick Setup Wizard design * Removed: Redundant options from the Add Site form * Removed: Redundant options from the Quick Setup Wizard

--- a/assets/css/mainwp-semantic.css
+++ b/assets/css/mainwp-semantic.css
@@ -50,6 +50,9 @@
   margin-bottom: 10px;
   box-shadow: none; }
 
+  .mainwp-ui .ui.secondary.segment, .mainwp-quick-setup .ui.secondary.segment {
+    box-shadow: none; }
+
 .mainwp-ui .ui.alt.segment {
   border-top: none;
   padding-top: 0; }
